[gd_scene load_steps=4 format=3 uid="uid://cx4b2wgyswuds"]

[ext_resource type="Script" path="res://scenes/hephep_builder.gd" id="2_qggxj"]
[ext_resource type="Texture2D" uid="uid://bg84gbjijqbs6" path="res://Assets/Themes/UIpack_vector.svg" id="3_0h5mw"]
[ext_resource type="Script" path="res://scenes/BatchList.gd" id="3_0pw6q"]

[node name="HephepBuilder" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_qggxj")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_right = 800.0
offset_bottom = 600.0
texture = ExtResource("3_0h5mw")
region_rect = Rect2(485, 310, 99.7893, 100)
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 7

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_right = 800.0
offset_bottom = 40.0
theme_type_variation = &"HeaderMedium"
text = "Hephep Builder"
horizontal_alignment = 1

[node name="ProjectSettings" type="Control" parent="."]
anchors_preset = 0
offset_top = 82.0
offset_right = 800.0
offset_bottom = 170.0

[node name="ProjectPathLabel" type="Label" parent="ProjectSettings"]
layout_mode = 0
offset_left = 40.0
offset_top = 16.0
offset_right = 194.0
offset_bottom = 37.0
text = "Project path:"

[node name="ProjectPathLineEdit" type="LineEdit" parent="ProjectSettings"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 0
offset_left = 40.0
offset_top = 40.0
offset_right = 672.0
offset_bottom = 72.0
placeholder_text = "the path for the project you want to build"

[node name="ProjectBrowseButton" type="Button" parent="ProjectSettings"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 0
offset_left = 680.0
offset_top = 39.0
offset_right = 768.0
offset_bottom = 71.0
text = "BROWSE"

[node name="GodotSettings" type="Control" parent="."]
anchors_preset = 0
offset_top = 154.0
offset_right = 800.0
offset_bottom = 234.0

[node name="GodotPathLabel" type="Label" parent="GodotSettings"]
layout_mode = 0
offset_left = 40.0
offset_top = 16.0
offset_right = 194.0
offset_bottom = 37.0
text = "Godot path:"

[node name="GododtPathLineEdit" type="LineEdit" parent="GodotSettings"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 0
offset_left = 40.0
offset_top = 40.0
offset_right = 672.0
offset_bottom = 66.0
placeholder_text = "the path for the Godot version you want to build with"

[node name="GodotBrowseButton" type="Button" parent="GodotSettings"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 0
offset_left = 680.0
offset_top = 38.0
offset_right = 768.0
offset_bottom = 70.0
text = "BROWSE"

[node name="PlatformsSettings" type="Control" parent="."]
anchors_preset = 0
offset_left = 27.0
offset_top = 250.0
offset_right = 752.0
offset_bottom = 330.0
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="PlatformsSettings"]
layout_mode = 0
offset_right = 741.0
offset_bottom = 40.0
theme_override_constants/margin_left = 16

[node name="PlatformSettingsHbox" type="HBoxContainer" parent="PlatformsSettings/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="WindowsPreset" type="VBoxContainer" parent="PlatformsSettings/MarginContainer/PlatformSettingsHbox"]
custom_minimum_size = Vector2(224, 0)
layout_mode = 2

[node name="LinuxPreset" type="VBoxContainer" parent="PlatformsSettings/MarginContainer/PlatformSettingsHbox"]
custom_minimum_size = Vector2(224, 0)
layout_mode = 2

[node name="MacPreset" type="VBoxContainer" parent="PlatformsSettings/MarginContainer/PlatformSettingsHbox"]
custom_minimum_size = Vector2(224, 0)
layout_mode = 2

[node name="BatchList" type="Control" parent="."]
anchors_preset = 0
offset_top = 393.0
offset_right = 800.0
offset_bottom = 672.0
mouse_filter = 1
script = ExtResource("3_0pw6q")

[node name="BatchListTitle" type="Label" parent="BatchList"]
layout_mode = 0
offset_left = 39.0
offset_right = 177.0
offset_bottom = 26.0
text = "SCRIPTS TO EXECUTE NEXT:"

[node name="BatchListTitle2" type="Label" parent="BatchList"]
layout_mode = 0
offset_left = 64.0
offset_top = 29.0
offset_right = 273.0
offset_bottom = 55.0
text = "Path:"

[node name="BatchListTitle3" type="Label" parent="BatchList"]
layout_mode = 0
offset_left = 424.0
offset_top = 29.0
offset_right = 633.0
offset_bottom = 55.0
text = "Args:"

[node name="ScriptPathLineEdit" type="LineEdit" parent="BatchList"]
layout_mode = 0
offset_left = 40.0
offset_top = 55.0
offset_right = 320.0
offset_bottom = 86.0
mouse_filter = 1
editable = false

[node name="ScriptArgsLineEdit" type="LineEdit" parent="BatchList"]
layout_mode = 0
offset_left = 416.0
offset_top = 55.0
offset_right = 709.0
offset_bottom = 86.0
mouse_filter = 1

[node name="ItchScriptBrowseButton" type="Button" parent="BatchList"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 0
offset_left = 328.0
offset_top = 55.0
offset_right = 412.0
offset_bottom = 87.0
mouse_filter = 1
text = "BROWSE"

[node name="AddScriptButton" type="Button" parent="BatchList"]
layout_mode = 0
offset_left = 712.0
offset_top = 55.0
offset_right = 768.0
offset_bottom = 87.0
mouse_filter = 1
disabled = true
text = "ADD"

[node name="DelScriptButton" type="Button" parent="BatchList"]
layout_mode = 0
offset_left = 712.0
offset_top = 95.0
offset_right = 768.0
offset_bottom = 127.0
mouse_filter = 1
disabled = true
text = "DEL"

[node name="ScriptDialog" type="FileDialog" parent="BatchList"]
title = "Open a File"
initial_position = 1
size = Vector2i(800, 400)
min_size = Vector2i(300, 300)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2

[node name="ScriptItemList" type="ItemList" parent="BatchList"]
layout_mode = 0
offset_left = 40.0
offset_top = 95.0
offset_right = 709.0
offset_bottom = 247.0
mouse_filter = 1
text_overrun_behavior = 1
max_columns = 2

[node name="ListUpButton" type="Button" parent="BatchList"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 0
offset_left = 712.0
offset_top = 135.0
offset_right = 763.0
offset_bottom = 167.0
mouse_filter = 1
disabled = true
text = "up"

[node name="ListDownButton" type="Button" parent="BatchList"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 0
offset_left = 712.0
offset_top = 168.0
offset_right = 763.0
offset_bottom = 200.0
disabled = true
text = "down"

[node name="BuildButton" type="Button" parent="."]
custom_minimum_size = Vector2(0, 32)
layout_mode = 0
offset_left = 656.0
offset_top = 920.0
offset_right = 768.0
offset_bottom = 952.0
disabled = true
text = "BUILD"

[node name="ProjectDialog" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 1
size = Vector2i(800, 400)
min_size = Vector2i(300, 300)
ok_button_text = "Select Current Folder"
dialog_hide_on_ok = true
file_mode = 2
access = 2

[node name="GodotDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
size = Vector2i(800, 400)
min_size = Vector2i(300, 300)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2

[node name="GamePreset" type="MenuButton" parent="."]
custom_minimum_size = Vector2(226, 32)
layout_mode = 0
offset_left = 440.0
offset_top = 48.0
offset_right = 672.0
offset_bottom = 80.0
flat = false

[node name="GamePresetSaveButton" type="Button" parent="."]
custom_minimum_size = Vector2(0, 32)
layout_mode = 0
offset_left = 680.0
offset_top = 48.0
offset_right = 727.0
offset_bottom = 80.0
disabled = true
text = "SAVE"

[node name="GamePresetDeleteButton" type="Button" parent="."]
custom_minimum_size = Vector2(0, 32)
layout_mode = 0
offset_left = 728.0
offset_top = 48.0
offset_right = 768.0
offset_bottom = 80.0
disabled = true
text = "DEL"

[node name="ltd" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 27.0
offset_top = 560.0
offset_right = 465.0
offset_bottom = 581.0
text = "HEPEP TEAM ALL RIGHTS RESERVED LTD INC"

[node name="console" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 39.0
offset_top = 672.0
offset_right = 640.0
offset_bottom = 960.0
editable = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false

[connection signal="project_path_loaded" from="." to="." method="_on_project_path_loaded"]
[connection signal="pressed" from="ProjectSettings/ProjectBrowseButton" to="." method="_on_project_browse_button_pressed"]
[connection signal="pressed" from="GodotSettings/GodotBrowseButton" to="." method="_on_godot_browse_button_pressed"]
[connection signal="pressed" from="BatchList/ItchScriptBrowseButton" to="BatchList" method="_on_itch_script_browse_button_pressed"]
[connection signal="pressed" from="BatchList/AddScriptButton" to="BatchList" method="_on_add_script_button_pressed"]
[connection signal="pressed" from="BatchList/DelScriptButton" to="BatchList" method="_on_del_script_button_pressed"]
[connection signal="file_selected" from="BatchList/ScriptDialog" to="BatchList" method="_on_itch_dialog_file_selected"]
[connection signal="item_clicked" from="BatchList/ScriptItemList" to="BatchList" method="_on_script_item_list_item_clicked"]
[connection signal="item_selected" from="BatchList/ScriptItemList" to="BatchList" method="_on_script_item_list_item_selected"]
[connection signal="pressed" from="BatchList/ListUpButton" to="BatchList" method="_on_list_up_button_pressed"]
[connection signal="pressed" from="BatchList/ListDownButton" to="BatchList" method="_on_list_down_button_pressed"]
[connection signal="pressed" from="BuildButton" to="." method="_on_build_button_pressed"]
[connection signal="dir_selected" from="ProjectDialog" to="." method="_on_project_dialog_dir_selected"]
[connection signal="file_selected" from="GodotDialog" to="." method="_on_godot_dialog_file_selected"]
[connection signal="pressed" from="GamePresetSaveButton" to="." method="_on_game_preset_save_button_pressed"]
[connection signal="pressed" from="GamePresetDeleteButton" to="." method="_on_game_preset_delete_button_pressed"]
